Fix search input focus text alignement and overscroll-behavior for results

--- a/assets/css/search-bar.css
+++ b/assets/css/search-bar.css
@@ -25,7 +25,7 @@
 
 .top-search .search-bar .search-input {
   background-color: var(--searchSearch);
-  border: none;
+  border: 1px solid transparent;
   border-radius: 8px;
   color: var(--searchAccentMain);
   position: relative;
@@ -40,7 +40,7 @@
 }
 
 .top-search .search-bar .search-input:focus {
-  border: 1px solid var(--searchBarFocusColor);
+  border-color: var(--searchBarFocusColor);
   border-radius: 8px;
   position: relative;
   box-shadow: 0px 4px 20px 0px var(--searchBarBorderColor) inset;
